--- a/style.css
+++ b/style.css
@@ -4,5 +4,43 @@
 }
 
 body {
+    padding-top: 100px;
+}
+
+ul {
+    list-style-type: none;
+}
+
+h1 {
+
+}
+
+h2 {
+
+}
+
+h3 {
+    text-decoration: underline;
+    font-size: 1.5em;
+}
+
+.container {
+    display: flex;
+    
+}
+nav {
+    font-family: 'Lato', sans-serif;
+    flex-grow: 1;
+
+}
+nav .sticky {
+    position: sticky;
+    margin: 50px;
+    top: 50px;
+}
+main {
     font-family: 'Arapey', serif;
+    flex-basis: 60%;
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, .1);
+    padding: 20px 40px;
 }
