--- a/style.css
+++ b/style.css
@@ -9,10 +9,6 @@
     display: flex;
 }
 
-ul {
-    list-style-type: none;
-}
-
 h1 {
     text-align: right;
     margin-bottom: 100px;
@@ -22,13 +18,14 @@ h1 {
 }
 
 h2 {
-
+    margin: 20px 0;
 }
 
 h3 {
     text-decoration: underline;
     font-size: 1.5em;
     margin-bottom: 20px;
+    margin-left: 50px;
 }
 
 nav {
@@ -38,27 +35,45 @@ nav {
 }
 nav .sticky {
     position: sticky;
-    margin: 50px;
+    margin-top: 50px;
     top: 50px;
+}
+nav ul {
+    list-style-type: none;
 }
 nav li {
     font-size: 1em;
-    padding: 10px 50px;
+    padding: 10px 30px;
+    position: relative;
+    margin-left: 20px;
+}
+
+/* Fancy design for the menu items */
+nav li:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    border-left: 20px solid white;
+    border-top: 20px solid transparent;
+    border-bottom: 20px solid transparent;
 }
 nav a {
     text-decoration: none;
     color: black;
-    
 }
 nav li:hover {
-    background-color: cornflowerblue;
+    background-color: lightcoral;
 }
 
 main {
     font-family: 'Arapey', serif;
     flex-basis: 60%;
-    box-shadow: 0 0 10px 1px rgba(0, 0, 0, .1);
+    box-shadow: 0 0 10px 1px rgba(0, 0, 0, .3);
     padding: 20px 40px;
+    z-index: 1;
 }
 p {
     font-size: 1em;
